objects/advisory_rewards_points__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Comments__c</fullName>
        <label>Admin Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Trans_No__c</fullName>
        <label>CC Trans No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The contact selected must be an Employee record type.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advisory Rewards Points</relationshipLabel>
        <relationshipName>Advisory_Rewards_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exp_Type__c</fullName>
        <inlineHelpText>Reward Type</inlineHelpText>
        <label>Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redemption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <defaultValue>NOW ()</defaultValue>
        <label>Expense Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finance_Id__c</fullName>
        <description>field on the User record to store Finance Code which is used by other non-sf systems to identify employees</description>
        <label>Finance Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Group_Title__c</fullName>
        <label>Main Group Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miles__c</fullName>
        <label>Miles</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_ID__c</fullName>
        <label>Pay ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perdiem_Rate__c</fullName>
        <label>Perdiem Rate</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points_Multiplier__c</fullName>
        <label>Points Multiplier</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <inlineHelpText>Amount (Dollars)</inlineHelpText>
        <label>Points</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <defaultValue>NOW ()</defaultValue>
        <label>Purchase Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <externalId>true</externalId>
        <label>Reference Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reimbursable__c</fullName>
        <label>Reimbursable</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Criteria__c</fullName>
        <label>Rule Criteria</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Description__c</fullName>
        <defaultValue>&quot;Administration&quot;</defaultValue>
        <label>Rule Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_ID__c</fullName>
        <label>Rule ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Number__c</fullName>
        <label>Rule Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Status</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_No__c</fullName>
        <label>Ticket No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Advisory_Rewards_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Advisory Rewards Points</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Finance_Id__c</columns>
        <columns>Contact_id__c</columns>
        <columns>Reference_Number__c</columns>
        <columns>CC_Trans_No__c</columns>
        <columns>Rule_Description__c</columns>
        <columns>Exp_Type__c</columns>
        <columns>Business_Amount__c</columns>
        <columns>Points__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Expense_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor__c</columns>
        <columns>Comments__c</columns>
        <columns>Admin_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Expense_Date__c</columns>
        <columns>Exp_Type__c</columns>
        <columns>Contact_id__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Advisory Rewards Points Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advisory Rewards Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Finance_Code_Missing</fullName>
        <active>true</active>
        <description>Created as part of CR-5241 to prevent Advisory Rewards Points records being created without a Finance code. The Finance code is required to flow onto other systems.</description>
        <errorConditionFormula>ISBLANK(Contact_id__r.Employee_User_Record__r.Finance_Code__c )</errorConditionFormula>
        <errorMessage>The employee you have selected does not have a user record associated with an employee code. Please associate that Contact with the correct user before continuing.</errorMessage>
    </validationRules>
</CustomObject>